<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/info_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <include layout="@layout/view_toolbar"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view_word"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:ignore="ContentDescription">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_to_own_category"
                android:layout_marginStart="@dimen/size_12"
                android:layout_marginEnd="@dimen/size_12"
                android:layout_marginTop="@dimen/size_16"
                android:textSize="@dimen/font_16"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/size_12"
                android:layout_marginTop="@dimen/size_16">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/container_text_word_input_word"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeColor="@color/colorPrimary"
                    android:layout_marginEnd="@dimen/size_12"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_input_word"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_color_main"
                        android:singleLine="true"
                        android:maxLength="200"
                        android:hint="@string/word"/>

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/image_word_microphone"
                    android:layout_width="@dimen/size_42"
                    android:layout_height="@dimen/size_42"
                    android:padding="@dimen/size_8"
                    app:srcCompat="@drawable/ic_microphone"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/size_2"
                    android:background="?android:attr/selectableItemBackground"/>

                <Spinner
                    android:id="@+id/spinner_word_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/size_2"/>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/container_text_word_input_transcription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/colorPrimary"
                android:layout_marginStart="@dimen/size_12"
                android:layout_marginEnd="@dimen/size_12"
                android:layout_marginTop="@dimen/size_16">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_transcription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color_main"
                    android:singleLine="true"
                    android:maxLength="200"
                    android:hint="@string/transcription"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/size_12"
                android:layout_marginTop="@dimen/size_16">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/container_text_word_input_translation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeColor="@color/colorPrimary"
                    android:layout_marginEnd="@dimen/size_12"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_input_translation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_color_main"
                        android:singleLine="true"
                        android:maxLength="200"
                        android:hint="@string/translation"/>

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/image_word_microphone_translation"
                    android:layout_width="@dimen/size_42"
                    android:layout_height="@dimen/size_42"
                    android:padding="@dimen/size_8"
                    app:srcCompat="@drawable/ic_microphone"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/size_2"
                    android:background="?android:attr/selectableItemBackground"/>

                <Spinner
                    android:id="@+id/spinner_word_language_translation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/size_2"/>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/container_text_word_own_tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/colorPrimary"
                android:layout_marginHorizontal="@dimen/size_12"
                android:layout_marginTop="@dimen/size_16">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_own_tag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color_main"
                    android:singleLine="true"
                    android:maxLength="200"
                    android:hint="@string/own_category"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/text_word_own_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or_select_from_exists"
                android:layout_marginStart="@dimen/size_12"
                android:layout_marginEnd="@dimen/size_12"
                android:layout_marginTop="@dimen/size_16"
                android:textSize="@dimen/font_16"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_word_own_categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/size_42"
                android:layout_marginTop="@dimen/size_12"
                android:clipToPadding="false"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/view_item_category"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
