<?xml version="1.0" encoding="utf-8"?>
<relaxeddd.englishnotify.common.NavigationBarContentFrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_container">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.MainActivity"
        tools:openDrawer="start">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_main_activity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UnusedAttribute">

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/fragment_navigation_host"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:name="androidx.navigation.fragment.NavHostFragment"
                app:navGraph="@navigation/navigation_graph"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_view_main"
                app:defaultNavHost="true"/>

            <View
                android:id="@+id/status_bar_scrim"
                android:layout_width="match_parent"
                android:layout_height="-2dp"
                android:background="@color/status_bar_scrim"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/button_main_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_view_main"
                android:src="@drawable/ic_plus"
                app:tint="@color/white"
                app:borderWidth="0dp"
                android:visibility="gone"
                android:contentDescription="@string/main"
                android:layout_marginBottom="@dimen/size_28"
                android:layout_marginEnd="@dimen/size_24"
                tools:visibility="visible"/>

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottom_navigation_view_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:itemIconTint="@drawable/selector_bottom_navigation"
                app:itemTextColor="@drawable/selector_bottom_navigation"
                app:menu="@menu/menu_main_navigation"
                android:backgroundTint="@color/bottom_navigation_color"
                android:backgroundTintMode="src_over"
                android:background="@color/bottom_navigation_color"
                app:itemBackground="@color/bottom_navigation_color"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <RelativeLayout
                android:id="@+id/container_main_progress_bar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="@dimen/size_16"
                android:clickable="true"
                android:focusable="true">

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/drawer_navigation"
            android:layout_width="@dimen/nav_drawer_width"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:insetForeground="@color/transparent"
            app:menu="@menu/navigation"
            tools:visibility="gone"/>

    </androidx.drawerlayout.widget.DrawerLayout>

</relaxeddd.englishnotify.common.NavigationBarContentFrameLayout>
