...
    <string name="check_learned_words">Check learned words</string>
    <string name="correct">Correct!</string>
    <string name="correct_answer">Correct answer</string>
    <string name="delete">Delete</string>
    <string name="delimiter_should_not_be_empty">Delimiter should not be empty</string>
    <string name="delimiters_should_be_different">Delimiters should be different</string>
    <string name="dictionary">Dictionary</string>
    <string name="do_you_really_want_to_logout">Do you really want to exit?</string>
    <string name="do_you_really_want_to_delete_words">Do you really want to delete words?</string>
    <string name="do_you_really_want_to_off_notifications">Do you really want disable notifications?</string>
    <string name="duration_not_show">with duration</string>
    <string name="edit">Edit</string>
    <string name="enable_notifications">Enable notifications</string>
...
    <string name="not_show_notifications">Don`t show notifications beginning with (24-hour clock, the number from 0 to 23)</string>
    <string name="notification_categories">Notification categories</string>
    <string name="notifications_language">Notifications language</string>
    <string name="notifications_not_receiving_enable">Notifications is not receiving, please enable it</string>
    <string name="notifications_not_receiving_authorize">Notifications is not receiving, please sign in</string>
    <string name="notifications_view">Notifications view</string>
    <string name="notifications">Notifications</string>
    <string name="one_more">One more</string>
    <string name="ok">OK</string>
    <string name="or_select_from_exists">Or select own category from exists</string>
    <string name="other">Other</string>
    <string name="own_categories">Own categories</string>
    <string name="own_category">Own category</string>
...
    <string name="test_notifications_left">%s test notifications left</string>
    <string name="test_notifications_text">Receive test notification</string>
    <string name="time_new">Time new</string>
    <string name="time_old">Time old</string>
    <string name="too_many_words_to_save">Too many words to save</string>
    <string name="training">Training</string>
    <string name="training_setting">Training setting</string>
    <string name="transcription">Transcription</string>
    <string name="translation">Translation</string>
    <string name="translation_transcription_delimiter">Translation, transcription delimiter</string>
    <string name="true_answer">True!</string>
    <string name="undefined_error">Undefined error</string>
    <string name="unauthorized_error">Unauthorized error</string>
...
